backend/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-loadbalancer
  namespace: ingress-nginx
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
